--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 	                        <li><a href="#fourth-block">Find os</a></li>
 	                    </ul>
 	                </div>
-	                <div class="closed nav-burger" onclick="menuToggle()"></div>
+	                <div class="closed nav-burger" onclick="menuOpen()"></div>
 	                <div class="mobile-nav-bar">
-	               		<div class="open nav-burger" onclick="menuToggle()"></div>
+	               		<div class="open nav-burger" onclick="menuClose()"></div>
 	                    <ul class="nav">
 		                    <li><a href="#landing">Forside</a></li>
 		                    <li><a href="#first-block">Gode Grunde</a></li>
