--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         		<article class="flexslider">
 				  	<ul class="slides">
 				  		<li>
-				  			<video id="landing-vid" preload="auto" onclick="vidplay()">
+				  			<video id="landing-vid" preload="auto" onClick="vidplay()">
 					  			<source src="app/assets/video/preview.mp4" type="video/mp4">
 					  			<source src="app/assets/video/preview.ogg" type="video/ogg">
 					  			<source src="app/assets/video/preview.webm" type="video/webm">
@@ -58,8 +58,8 @@
 				  			<div id="control-wrapper" class="slide-header">
 				  				<div id="vid-control">
                                 <span>Der er gode grunde til</span>
-                                <button class="play btn" id="play" onclick="vidplay()"></button>
-                                <button style="display: none" class="pause btn" id="play" onclick="vidplay()"></button>
+                                <button class="play btn" id="play" onClick="vidplay()"></button>
+                                <button style="display: none" class="pause btn" id="play" onClick="vidplay()"></button>
                                 <span>at fremtiden ligger i Køge</span>
                                 </div>
                             </div>
@@ -68,6 +68,10 @@
 				      		<img src="/app/assets/img/flere-spor.jpg" />
 				      		<article class="slide-header">
                                 <h1>Flere spor</h1>
+
+                                <p class="hero-text">
+									"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. "
+                                </p>
                             </article>
                             
 				    	</li>
@@ -75,18 +79,30 @@
 				      		<img src="/app/assets/img/Koege-havn.jpg" />
 				      		<article class="slide-header">
                                 <h1>Køge havn</h1>
+
+                                 <p class="hero-text">
+									"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. "
+                                </p>
                             </article>
 				    	</li>
 				    	<li>
 				      		<img src="/app/assets/img/koege-north.jpg" />
 				      		<article class="slide-header">
                                 <h1>Køge nord</h1>
+
+                                 <p class="hero-text">
+									"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. "
+                                </p>
                             </article>
 				    	</li>
 				    	<li>
 				      		<img src="/app/assets/img/femern-belt.jpg" />
 				      		<article class="slide-header">
                                 <h1>Fermern Bælt</h1>
+
+                                 <p class="hero-text">
+									"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. "
+                                </p>
                             </article>
 				    	</li>
 				  	</ul>
